Update incorrect link

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <p class="tech"><span>Android</span><span>Java</span><span>Thermal Calculation</span></p>
     </a>
 
-    <a href="https://play.google.com/store/apps/details?id=me.danb.retherm" target="_href" class="card ripples purple">
+    <a href="https://www.e-bikeshop.co.uk" target="_href" class="card ripples purple">
       <h2>E-bikeshop Ecommerce</h2>
       <p class="summary">An online shop selling electric bikes &amp; a popular blog.</p>
       <hr>
