--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
   <link href='//fonts.googleapis.com/css?family=Roboto:400,300italic,300,100italic,100,400italic,500,500italic,700,900,700italic' rel='stylesheet' type='text/css'>
   <link rel="icon" type="image/png" href="favicons/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16" />
-<style>
-/*   * {
-  background-color: rgba(0, 0, 0, 0.015);
-} */
-</style>
 </head>
 <body>
 
@@ -26,52 +21,18 @@
     </div>
   </header>
 
-  <section class="container">
+  <section class="container" id="projects">
     <h2>My Latest Projects</h2>
 
-    <a href="http://social-links.danb.me/" target="_href" class="card ripples orange">
-      <h2>Social Share Links</h2>
-      <p class="summary">A site to generate anchor links for social sharing.</p>
+    <a v-for="project in projects" :href="project.link" target="_href" class="card ripples" :class="project.color">
+      <h2 v-html="project.title"></h2>
+      <p class="summary" v-text="project.description"></p>
       <hr>
-      <p class="tech"><span>HTML</span><span>CSS</span><span>JavaScript</span><span>SASS</span></p>
-    </a>
-
-    <a href="http://ssddanbrown.github.io/Brazen/" target="_href" class="card ripples green">
-      <h2>The Brazen Project</h2>
-      <p class="summary">An opinionated SASS &amp; HTML based website starter kit.</p>
-      <hr>
-      <p class="tech"><span>HTML</span><span>CSS</span><span>Gulp</span><span>SASS</span></p>
-    </a>
-
-    <a href="https://iwanttolearn.io" target="_href" class="card ripples blue">
-      <h2>I Want To <br> Learn</h2>
-      <p class="summary">A site to list learning resources for web &amp; coding based technologies.</p>
-      <hr>
-      <p class="tech"><span>Laravel</span><span>PHP</span><span>SASS</span><span>HHVM</span></p>
-    </a>
-
-    <a href="https://play.google.com/store/apps/details?id=com.southerntemp.thermocouples" target="_href" class="card ripples red">
-      <h2>Thermocouples For Android</h2>
-      <p class="summary">An app for viewing and calculating thermocouple info.</p>
-      <hr>
-      <p class="tech"><span>Android</span><span>Java</span><span>Material Design</span></p>
-    </a>
-
-    <a href="https://play.google.com/store/apps/details?id=me.danb.retherm" target="_href" class="card ripples yellow">
-      <h2>Retherm For Android</h2>
-      <p class="summary">An app to convert between RTD resistance and temperature.</p>
-      <hr>
-      <p class="tech"><span>Android</span><span>Java</span><span>Thermal Calculation</span></p>
-    </a>
-
-    <a href="https://www.e-bikeshop.co.uk" target="_href" class="card ripples purple">
-      <h2>E-bikeshop Ecommerce</h2>
-      <p class="summary">An online shop selling electric bikes &amp; a popular blog.</p>
-      <hr>
-      <p class="tech"><span>PHP</span><span>Web Design</span><span>SASS</span><span>HTML</span></p>
+      <p class="tech"><span v-for="skill in project.skills" v-text="skill"></span></p>
     </a>
 
   </section>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/vue/1.0.10/vue.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
