--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <!-- Meta Tags -->
   <meta charset="UTF-8">
-  <title>Sample Project</title>
+  <meta name="viewport" content="initial-scale=1">
+  <meta name="theme-color" content="#73B3B3" />
+
+  <title>Dan Brown - UK Web Developer</title>
+
+  <!-- Icons -->
+  <link rel="icon" type="image/png" href="favicons/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16" />
+
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="dist/styles.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='//fonts.googleapis.com/css?family=Roboto:400,300italic,300,100italic,100,400italic,500,500italic,700,900,700italic' rel='stylesheet' type='text/css'>
-  <link rel="icon" type="image/png" href="favicons/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16" />
+
 </head>
 <body>
 
@@ -32,6 +42,8 @@
     </a>
 
   </section>
+  
+  <!-- JavaScript -->
   <script src="http://cdnjs.cloudflare.com/ajax/libs/vue/1.0.10/vue.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
 </body>
