Updated vuejs script to https

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </section>
   
   <!-- JavaScript -->
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/vue/1.0.10/vue.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/vue/1.0.10/vue.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
