--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
     <div class="padded clearfix">
       <div class="logo float">Dan Brown</div>
       <ul class="inline pull-right">
-        <li><a href="https://github.com/ssddanbrown"><i class="fa fa-github"></i></a></li>
-        <li><a href="https://uk.linkedin.com/in/danjamesbrown"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="https://github.com/ssddanbrown" target="_blank"><i class="fa fa-github"></i></a></li>
+        <li><a href="https://uk.linkedin.com/in/danjamesbrown" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="https://twitter.com/ssddanbrown" target="_blank"><i class="fa fa-twitter"></i></a></li>
       </ul>
     </div>
   </header>
